# Frappe-ONDC-Sellerapp

./: .gitignore  MANIFEST.in  PROJECT_PLAN.md  README.md  delete_fixture.py  docker-compose.yml  migrate_structure.py  ondc_client.py  ondc_product.py  package.json  pyproject.toml  requirements.txt  webhook.py
bap/: README.md
bpp/: README.md
docs/architecture/: ARCHITECTURE.md
docs/onboarding/: ONBOARDING_GUIDE.md
gateway/: README.md
igm/: README.md
logistics/: README.md
ondc_seller_app/: after_install.py  fix_pramaan_demo_data.py  hooks.py  middleware.py  modules.txt  tasks.py
ondc_seller_app/api/: auth.py  compliance_log.py  igm_adapter.py  ondc_client.py  ondc_errors.py  rsp_adapter.py  tasks.py  webhook.py
ondc_seller_app/fixtures/: .gitkeep  README.md  custom_fields.json
ondc_seller_app/ondc_seller/: __init__.py
ondc_seller_app/ondc_seller/config/: desktop.py  ondc_seller.py
ondc_seller_app/ondc_seller/doctype/ondc_compliance_log/: ondc_compliance_log.json  ondc_compliance_log.py
ondc_seller_app/ondc_seller/doctype/ondc_order/: ondc_order.json  ondc_order.py
ondc_seller_app/patches/: create_custom_fields.py
ondc_seller_app/public/js/: ondc_seller.js
ondc_seller_app/setup/: custom_fields.json
ondc_seller_app/utils/: bulk_sync.py  item_hooks.py  order_hooks.py  webshop_hooks.py
registry/: README.md
shared/: README.md
shared/config/: domains.js
shared/crypto/: keys.js  signing.js  verification.js
shared/middleware/: auth.js
shared/protocol/: context.js  request.js  response.js
shared/utils/: registry-client.js
(+26 files in other folders)
